--- a/src/main/resources/templates/addCustomerForm.html
+++ b/src/main/resources/templates/addCustomerForm.html
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="header_resources">
     <meta charset="UTF-8">
-    <title>Add Customer </title>
+    <title th:text="#{project.title}"></title>
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css} "/>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <style>
+        body{
+            padding-top: 80px;
+        }
+        footer{
+            height: 50px;
+        }
+    </style>
 </head>
 <body>
+<nav th:fragment="nav_fragment" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="#">Manage Customer</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/}">Home
+                    <span class="sr-only">(current)</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Customer List</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admin/customer/}">Control Panel</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+
 <div class="container">
-    <p>Add Costomer Form</p>
+    <div class="card">
+        <div class="card-header">
+            <h2>New customer</h2>
+        </div>
+        <div class="card-body">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputEmail4">Email</label>
+                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                    </div>
+
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress">Street</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputCity">City</label>
+                        <input type="text" class="form-control" id="inputCity">
+                    </div>
+
+                    <div class="form-group col-md-2">
+                        <label for="inputZip">Zip</label>
+                        <input type="text" class="form-control" id="inputZip">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="homePhone">Enter home phone</label>
+                        <input type="tel" class="form-control" id="homePhone">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="cellPhone">Enter cell phone</label>
+                        <input type="tel" class="form-control" id="cellPhone">
+                    </div>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Save customer</button>
+            </form>
+        </div>
+        <div class="card-footer" th:fragment="cardFooter_fragment">
+            <a class="btn btn-danger" th:href="@{/admin/customer/}">Back</a>
+            <br>
+        </div>
+    </div>
+    <br/>
 </div>
+
+
+<footer th:fragment="footer_fragment" class="py-5 bg-dark fixed-bottom">
+    <p class="m-0 text-center text-white"> Copyright &copy; MOS 2021 by Mikael Aurell</p>
+</footer>
 </body>
 </html>
