--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -13,6 +13,9 @@
         body {
             padding-top: 60px;
         }
+        footer {
+            height: 30px;
+        }
     </style>
 
 </head>
@@ -20,7 +23,7 @@
 <body>
 
 <footer th:fragment="footer_fragment" class="py-5 bg-dark">
-    <p class="m-0 text-center text-white"> Copyright &copy; MOS 2021</p>
+    <p class="m-0 text-center text-white"> Copyright &copy; MOS 2021, by Mikael Aurell</p>
 </footer>
 
 </body>
