--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="#">Product List</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/product/}">Control Panel</a>
+                    <a class="nav-link" th:href="@{/customerManagement/showList}">Control Panel</a>
                 </li>
             </ul>
         </div>
