--- a/src/main/resources/templates/addCustomerForm.html
+++ b/src/main/resources/templates/addCustomerForm.html
@@ -47,40 +47,40 @@
             <h2>New customer</h2>
         </div>
         <div class="card-body">
-            <form>
+            <form th:action="@{/customerManagement/addToDatabase}" method="post" th:object="${customerDto}">
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="inputEmail4">Email</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                        <label>Email</label>
+                        <input th:field="*{email}" type="email" class="form-control" placeholder="Email">
                     </div>
 
                 </div>
                 <div class="form-group">
-                    <label for="inputAddress">Street</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    <label>Street</label>
+                    <input th:field="*{customerDetailsDto.street}" type="text" class="form-control" placeholder="1234 Main St">
                 </div>
 
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="inputCity">City</label>
-                        <input type="text" class="form-control" id="inputCity">
+                        <label>City</label>
+                        <input th:field="*{customerDetailsDto.city}" type="text" class="form-control" placeholder="City">
                     </div>
 
                     <div class="form-group col-md-2">
-                        <label for="inputZip">Zip</label>
-                        <input type="text" class="form-control" id="inputZip">
+                        <label>ZipCode</label>
+                        <input th:field="*{customerDetailsDto.zipCode}" type="text" class="form-control" placeholder="ZipCode">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="homePhone">Enter home phone</label>
-                        <input type="tel" class="form-control" id="homePhone">
+                        <label>Enter home phone</label>
+                        <input th:field="*{customerDetailsDto.homePhone}" type="tel" class="form-control" placeholder="HomePhone">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="cellPhone">Enter cell phone</label>
-                        <input type="tel" class="form-control" id="cellPhone">
+                        <label>Enter cell phone</label>
+                        <input th:field="*{customerDetailsDto.cellPhone}" type="tel" class="form-control" placeholder="CellPhone">
                     </div>
                 </div>
 
